# CGAL

Intersection Lines/: CGAL_3  CGAL_3.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input1.txt  input2.txt  input3.txt
Lines/: CGAL_2  CGAL_2.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input1.txt  input2.txt  input3.txt  output1
Points/: CGAL_1  CGAL_1.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input1.txt  input2.txt  input3.txt
Polygon and Area/: CGAL_5  CGAL_5.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input1.txt  input2.txt  input3.txt
Triangle and Area/: CGAL_4  CGAL_4.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cgal_6  cgal_6.cpp  cmake_install.cmake  input1.txt  input2.txt  input3.txt
Triangulation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input1.txt  input2.txt  input3.txt
